# ai_qahelper

./: .env.example  .gitignore  CHANGELOG.md  CHAT_USAGE.md  LICENSE  README.md  ai-tester.config.example.yaml  pyproject.toml  requirements.txt  run_chat.sh  run_chat_windows.bat
.github/workflows/: ci.yml
docs/: CHAT_MODE.md  CONFIG.md  DEVELOPMENT.md  INPUT_FORMATS.md  OUTPUTS.md  QUALITY_GATE.md  SITE_DISCOVERY.md
eval_cases/: carsharing_order_flow.json  mesto_profile_edit.json  metro_mobile_core_flows.json  routes_order_form.json
examples/demo-run/: README.md  cli-output.txt  test-cases.sample.json
examples/minimal/: figma-notes.md  requirements.md
examples/sample-output/: README.md  consistency-report.json  test-analysis.json  test-cases.csv  test-cases.json  test-cases.xlsx
examples/screenshots/: README.md
knowledge_base/: api_testing_rules.md  bug_report_rules.md  checklist_rules.md  examples_from_projects.md  mobile_testing_rules.md  qa_learning_rules.md  test_case_rules.md
src/ai_qahelper/: __init__.py  autotest_service.py  chat_agent.py  chat_app.py  chat_executor.py  chat_launcher.py  chat_planner.py  cli.py  config.py  coverage.py  deduplication.py  docs_service.py  documentation_quality.py  execution.py  friendly_errors.py  inputs.py  junit_parse.py  knowledge_loader.py  llm_client.py  llm_errors.py  logging_utils.py  models.py  orchestrator.py  pdf_vision.py  qa_analysis.py  quality.py  reporting.py  session_naming.py  session_service.py  site_discovery.py  sync_service.py  template_service.py  testdocs.py  ui_documents.py
tests/: test_knowledge_loader.py
tests/integration/: test_agent_smoke.py  test_package_imports.py
tests/unit/: test_chat_app.py  test_chat_planner.py  test_checklist_reporting.py  test_config.py  test_coverage.py  test_coverage_first_prompts.py  test_deduplication.py  test_documentation_quality.py  test_friendly_errors.py  test_generate_docs_dedup.py  test_generate_docs_quality.py  test_inputs_docx_excel.py  test_json_parsing.py  test_launchers.py  test_qa_analysis.py  test_reporting.py  test_sample_artifacts.py  (+4 more)
tools/: import_training_data.py  normalize_training_packs.py
(+28 files in other folders)
